load("//bazel/config:copt.bzl", "ASYNC_SIMPLE_COPTS")

cc_library(
    name = "gtest_main",
    srcs = ["dotest.cpp"],
    hdrs = ["unittest.h"],
    deps = [
        "//:simple_executors",
        "@com_google_googletest//:gtest"
    ],
    copts = ASYNC_SIMPLE_COPTS,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "async_simple_test",
    srcs = glob(["*Test.cpp"]),
    deps = [
        "//:async_simple",
        "//async_simple/test:gtest_main",
    ],
    copts = ASYNC_SIMPLE_COPTS,
)
