load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel/config:copt.bzl", "ASYNC_SIMPLE_COPTS")

cc_library(
    name = "gtest_main",
    srcs = ["dotest.cpp"],
    hdrs = ["unittest.h"],
    copts = ASYNC_SIMPLE_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//:simple_executors",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "async_simple_test",
    srcs = glob(["*Test.cpp"]),
    copts = ASYNC_SIMPLE_COPTS,
    deps = [
        "//:async_simple",
        "//async_simple/test:gtest_main",
    ],
)
