load("@bazel_skylib//lib:selects.bzl", "selects")

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:aarch64",
    ],
)

config_setting(
    name = "linux_ppc64le",
    constraint_values = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:ppc",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
)

config_setting(
    name = "darwin_aarch64",
    constraint_values = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:aarch64",
    ],
)

selects.config_setting_group(
    name = "async_simple_with_uthread",
    match_any = [
        ":linux_x86_64",
        ":linux_aarch64",
        ":linux_ppc64le",
        ":darwin_x86_64",
        ":darwin_aarch64",
    ],
    visibility = ["//visibility:public"],
)

#TODO has_not_aio
config_setting(
    name = "has_not_aio",
    constraint_values = [
        "@bazel_tools//platforms:windows",
    ],
)

selects.config_setting_group(
    name = "async_simple_has_not_aio",
    match_any = [
        "@bazel_tools//platforms:windows",
        ":async_simple_disable_aio",
    ],
)

config_setting(
    name = "async_simple_disable_aio",
    define_values = {"ASYNC_SIMPLE_DISABLE_AIO": "true"},
)

config_setting(
    name = "async_simple_enable_tests",
    define_values = {"ASYNC_SIMPLE_ENABLE_TESTS": "ture"},
    visibility = ["//visibility:public"],
)
