load("//bazel/config:copt.bzl", "ASYNC_SIMPLE_COPTS")

cc_library(
    name = "hdrs_dep",
    hdrs = glob(["*.h"]),
    copts = ASYNC_SIMPLE_COPTS,
)

cc_test(
    name = "async_simple_coro_test",
    srcs = glob(["*.cpp"]),
    deps = [
        "//:async_simple",
        "//async_simple/test:gtest_main",
        ":hdrs_dep",
    ],  
    copts = ASYNC_SIMPLE_COPTS + select({
        "@platforms//os:windows": [],
        # Clang gives incorrect warnings, See https://github.com/llvm/llvm-project/issues/56768
        "//conditions:default": ["-Wno-unsequenced"],
    })
)
