load("//bazel/config:copt.bzl", "ASYNC_SIMPLE_COPTS")

cc_test(
    name = "async_simple_uthread_test",
    srcs = select({
        "//bazel/config:async_simple_with_uthread" : glob(["*.cpp"]),
        "//conditions:default" : [],
    }), 
    deps = [
        "//:async_simple",
        "//async_simple/test:gtest_main",
    ],
    copts = ASYNC_SIMPLE_COPTS,
)
